src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__oid__cast_oid_to_reg_proc.snap
---
source: src/expr/src/scalar/func/impls/oid.rs
expression: "#[sqlfunc(\n    sqlname = \"oidtoregproc\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastRegProcToOid)\n)]\nfn cast_oid_to_reg_proc(a: Oid) -> RegProc {\n    RegProc(a.0)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CastOidToRegProc;
impl crate::func::EagerUnaryFunc for CastOidToRegProc {
    type Input<'a> = Oid;
    type Output<'a> = RegProc;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_oid_to_reg_proc(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastRegProcToOid)
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastOidToRegProc {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("oidtoregproc")
    }
}
fn cast_oid_to_reg_proc(a: Oid) -> RegProc {
    RegProc(a.0)
}
